--- a/t test/t test.ipynb
+++ b/t test/t test.ipynb
@@ -17,12 +17,17 @@
    "source": [
     "## One-sample T-test with Python\n",
     "\n",
-    "The test will tell us whether means of the sample and the population are different"
+    "The test will tell us whether means of the sample and the population are different\n",
+    "\n",
+    "ho- there is no difference between mean of population and sample\n",
+    "ha- there is a difference between mean of population and sample\n",
+    "\n",
+    "if p_value < .05 then we reject ho"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +45,7 @@
        "32"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -51,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,16 +85,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([30, 24, 30, 28, 20, 43, 55, 70, 70, 23])"
+       "array([16, 18, 18, 16, 24, 23, 20, 28, 35, 19])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -100,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,28 +114,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "ttest,p_value=ttest_1samp(age_sample,30)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.15997019001297158\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(p_value)"
    ]
   },
   {
@@ -142,7 +130,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "we are accepting null hypothesis\n"
+      "0.0018224658811492743\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(p_value)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " we are rejecting null hypothesis\n"
      ]
     }
    ],
@@ -164,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,13 +178,13 @@
     "import scipy.stats as stats\n",
     "import math\n",
     "np.random.seed(6)\n",
-    "school_ages=stats.poisson.rvs(loc=18,mu=35,size=1500)\n",
+    "school_ages=stats.poisson.rvs(loc=18,mu=35,size=1500)  # loc means left most value # it will start distribution to start with 18\n",
     "classA_ages=stats.poisson.rvs(loc=18,mu=30,size=60)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +193,7 @@
        "46.9"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,31 +204,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "_,p_value=stats.ttest_1samp(a=classA_ages,popmean=school_ages.mean())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1.139027071016194e-13"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "p_value"
    ]
   },
   {
@@ -234,10 +219,30 @@
     {
      "data": {
       "text/plain": [
-       "53.303333333333335"
+       "1.139027071016194e-13"
       ]
      },
      "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p_value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "53.303333333333335"
+      ]
+     },
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -248,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
